tests/expectations/compiler/function/self_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372040]: The allowed accesses to `self` are `self.caller` and `self.signer`.
    --> compiler-test:5:21
     |
   5 |         return self.foo == addr;
     |                     ^^^
Error [ETYC0372003]: Expected type `address` but type `no type` was found
    --> compiler-test:5:16
     |
   5 |         return self.foo == addr;
     |                ^^^^^^^^^^^^^^^^
"""]
